--- a/view/homepage/home.html
+++ b/view/homepage/home.html
@@ -11,51 +11,84 @@
 </head>
 
 <body>
-    <div class="topnav">
-        <ul>
-            <li class="logo" style="float: left; color: white;">Zux money beauty</li>
-            <li><a href="#gallery">GALLERY</a></li>
-            <li><a href="#services">SERVICES</a></li>
-            <li><a href="#contacts">CONTACTS</a></li>      
-            <li><a href="#about">ABOUT</a></li>
-            <li><a href="#home">HOME</a></li>
-        </ul>
-    </div>
     <div class="backimage">
-        <div class="banner"></div>
-        <div class="banner"></div>
-        <div class="banner"></div>
+        <div class="topnav">
+            <ul>
+                <li class="logo" style="float: left; color: white;">Zux money beauty</li>
+                <li><a href="#gallery">GALLERY</a></li>
+                <li><a href="#services">SERVICES</a></li>
+                <li><a href="#contacts">CONTACTS</a></li>
+                <li><a href="#about">ABOUT</a></li>
+                <li><a href="#home">HOME</a></li>
+            </ul>
+        </div>
     </div>
-    <div class="offers">
+    <div class="services">
         <div class="head">
             <p>
-                Special offers
+                <span>Our</span> Services
             </p>
         </div>
-        <div class="specialoffers">
+        <div class="servicesextra">
             <div class="servicesgallery">
                 <div class="servigallery1">
                     <a target="_blank" href="../../src/images/pic4.jpg">
                         <img src="../../src/images/pic4.jpg" alt="Cinque Terre" width="600" height="400">
                     </a>
-                    <p>free Wi-Fi</p>
+                    <p>HAIR <span>DRESSING</span></p>
                     <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
                         description of the image here</div>
                 </div>
-    
+
                 <div class="servigallery2">
                     <a target="_blank" href="../../src/images/pic2.jpg">
                         <img src="../../src/images/pic2.jpg" alt="Forest" width="600" height="400">
                     </a>
-                    
+                    <p>MAKE<span>UP</span></p>
                     <div class="desc">Add a description of the image hereAdd a description of the image here, Add a
                         description of the image here</div>
                 </div>
-    
+
                 <div class="servigallery3">
                     <a target="_blank" href="../../src/images/pic3.jpg">
                         <img src="../../src/images/pic3.jpg" alt="Northern Lights" width="600" height="400">
                     </a>
+                    <p><span>DISCOUNT</span> ON SERVICES</p>
+                    <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
+                        description of the image here</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="offers">
+        <div class="head">
+            <p>
+                <span>Special</span> offers
+            </p>
+        </div>
+        <div class="specialoffers">
+            <div class="offersgallery">
+                <div class="offgallery1">
+                    <a target="_blank" href="../../src/images/pic4.jpg">
+                        <img src="../../src/images/pic4.jpg" alt="Cinque Terre" width="600" height="400">
+                    </a>
+                    <p>FREE <span>Wi-Fi</span></p>
+                    <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
+                        description of the image here</div>
+                </div>
+                <div class="offgallery2">
+                    <a target="_blank" href="../../src/images/pic2.jpg">
+                        <img src="../../src/images/pic2.jpg" alt="Forest" width="600" height="400">
+                    </a>
+                    <p>JUICE AND <span>BITES</span></p>
+                    <div class="desc">Add a description of the image hereAdd a description of the image here, Add a
+                        description of the image here</div>
+                </div>
+                <div class="offgallery3">
+                    <a target="_blank" href="../../src/images/pic3.jpg">
+                        <img src="../../src/images/pic3.jpg" alt="Northern Lights" width="600" height="400">
+                    </a>
+                    <p><span>DISCOUNT</span> ON SERVICES</p>
                     <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
                         description of the image here</div>
                 </div>
@@ -63,4 +96,5 @@
         </div>
     </div>
 </body>
+
 </html>
