--- a/view/servicepage/service.html
+++ b/view/servicepage/service.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="homescript.js"></script>
+    <script src="service.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="homestyle.css">
+    <link rel="stylesheet" href="service.css">
     <title>zuxmoney</title>
 </head>
 
@@ -27,7 +27,7 @@
     <div class="services">
         <div class="head">
             <p>
-                <span>Our</span> Services
+                <span>Hair</span> Dressing
             </p>
         </div>
         <div class="servicesextra">
@@ -64,7 +64,7 @@
     <div class="offers">
         <div class="head">
             <p>
-                <span>Special</span> offers
+                <span>MAKE</span>UP
             </p>
         </div>
         <div class="specialoffers">
@@ -86,6 +86,41 @@
                         description of the image here</div>
                 </div>
                 <div class="offgallery3">
+                    <a target="_blank" href="../../src/images/pic3.jpg">
+                        <img src="../../src/images/pic3.jpg" alt="Northern Lights" width="600" height="400">
+                    </a>
+                    <p><span>DISCOUNT</span> ON SERVICES</p>
+                    <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
+                        description of the image here</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="nail">
+        <div class="head">
+            <p>
+                <span>NailsDressing</span> custo
+            </p>
+        </div>
+        <div class="nailoffer">
+            <div class="nailgallery">
+                <div class="nailgallery1">
+                    <a target="_blank" href="../../src/images/pic4.jpg">
+                        <img src="../../src/images/pic4.jpg" alt="Cinque Terre" width="600" height="400">
+                    </a>
+                    <p>FREE <span>Wi-Fi</span></p>
+                    <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
+                        description of the image here</div>
+                </div>
+                <div class="nailgallery2">
+                    <a target="_blank" href="../../src/images/pic2.jpg">
+                        <img src="../../src/images/pic2.jpg" alt="Forest" width="600" height="400">
+                    </a>
+                    <p>JUICE AND <span>BITES</span></p>
+                    <div class="desc">Add a description of the image hereAdd a description of the image here, Add a
+                        description of the image here</div>
+                </div>
+                <div class="nailgallery3">
                     <a target="_blank" href="../../src/images/pic3.jpg">
                         <img src="../../src/images/pic3.jpg" alt="Northern Lights" width="600" height="400">
                     </a>
