--- a/view/contacts/contacts.css
+++ b/view/contacts/contacts.css
@@ -1,168 +1,266 @@
 body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-      Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    /* background-color: rgb(0, 0, 0); */
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  /* background-color: rgb(0, 0, 0); */
+}
+
+:root {
+  --golden: rgb(230, 212, 14);
+}
+
+.topnav {
+  position: relative;
+  top: 0;
+  /* padding-right: 3%;    */
+  /* padding-left: 2%; */
+  width: 100%;
+}
+.topnav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  /* background-color: #333; */
+  /* border-radius: 2px; */
+  width: 100;
+}
+
+.topnav li {
+  float: right;
+  /* display: inline; */
+  margin-top: 3%;
+  margin-right: 2%;
+}
+
+.topnav li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 150%;
+  float: left;
+}
+
+.topnav li a:hover {
+  background-color: var(--golden);
+}
+
+.logo {
+  float: left;
+  display: block;
+  color: #111;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  margin-right: 200px;
+  font-size: 150%;
+}
+
+.backimage {
+  height: 300px;
+  background-image: url(../../src/images/pic7.jpg);
+  margin-top: 0%;
+  position: relative;
+  top: 0;
+  /* animation: change 30s infinite ease-in-out; */
+}
+@keyframes change {
+  0% {
+    background-image: url(../../src/images/pic2.jpg);
   }
-  
-  :root {
-    --golden: rgb(230, 212, 14);
+  20% {
+    background-image: url(../../src/images/pic3.jpg);
   }
+  40% {
+    background-image: url(../../src/images/pic4.jpg);
+  }
+  60% {
+    background-image: url(../../src/images/pic2.jpg);
+  }
+  80% {
+    background-image: url(../../src/images/pic2.jpg);
+  }
+  100% {
+    background-image: url(../../src/images/pic3.jpg);
+  }
+}
+
+
+.contact .head p {
+  font-size: 40px;
+  text-align: center;
+}
+
+.contact .head p span {
+  color: var(--golden);
+}
+
+.address {
+  height: 300px;
+  width: 30%;
+  margin-left: 10%; 
+  margin-top: 5%;
+  /* background-color: red; */
+  font-size: 150%;
+  float: left;
   
-  .topnav {
-    position: relative;
-    top: 0;
-    /* padding-right: 3%;    */
-    /* padding-left: 2%; */
+  
+}
+
+/* form */
+
+.formspace{
+  /* background-color: blue; */
+  width: 60%;
+  float: right;
+
+  
+}
+
+.formspace p{
+  font-size: 20px;
+  text-align: left;
+  margin-left: 10%;
+}
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 3px solid var(--golden);
+  border-radius: 4px;
+  resize: vertical;
+  font-size: 20px;
+}
+
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+}
+
+input[type=submit] {
+  background-color: black;
+  color:  white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: left;
+  font-weight: 700;
+}
+
+input[type=submit]:hover {
+  background-color: var(--golden);
+}
+
+.container {
+  border-radius: 5px;
+  padding-top: 0%;
+  padding-left: 10%;
+  box-sizing: border-box;
+}
+
+.col-25 {
+  float: left;
+  width: 25%;
+  margin-top: 6px;
+}
+
+.col-75 {
+  float: left;
+  width: 75%;
+  margin-top: 6px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .col-25, .col-75, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
+}
+
+/* footer starts here */
+
+.footer {
+  background-color: #252323;
+  padding: 15px;
+  text-align: center;
+  height: 300%;
+  color: aliceblue;
+  margin-top: 40%;
+}
+
+.rowf .columnf h2 {
+  color: var(--golden);
+}
+.rowf .columnf p {
+  font-size: 120%;
+}
+/* Create three equal columns that floats next to each other */
+.columnf {
+  float: left;
+  width: 29%;
+  padding: 15px;
+  margin-right: 2%;
+}
+
+/* Clear floats after the columns */
+.rowf:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .columnf {
     width: 100%;
   }
-  .topnav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    /* background-color: #333; */
-    /* border-radius: 2px; */
-    width: 100;
-  }
-  
-  .topnav li {
-    float: right;
-    /* display: inline; */
-    margin-top: 3%;
-    margin-right: 2%;
-  }
-  
-  .topnav li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 150%;
-    float: left;
-  }
-  
-  .topnav li a:hover {
-    background-color: var(--golden);
-  }
-  
-  .logo {
-    float: left;
-    display: block;
-    color: #111;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    margin-right: 200px;
-    font-size: 150%;
-  }
-  
-  .backimage {
-    height: 300px;
-    background-image: url(../../src/images/pic7.jpg);
-    margin-top: 0%;
-    position: relative;
-    top: 0;
-    /* animation: change 30s infinite ease-in-out; */
-  }
-  @keyframes change {
-    0% {
-      background-image: url(../../src/images/pic2.jpg);
-    }
-    20% {
-      background-image: url(../../src/images/pic3.jpg);
-    }
-    40% {
-      background-image: url(../../src/images/pic4.jpg);
-    }
-    60% {
-      background-image: url(../../src/images/pic2.jpg);
-    }
-    80% {
-      background-image: url(../../src/images/pic2.jpg);
-    }
-    100% {
-      background-image: url(../../src/images/pic3.jpg);
-    }
-  }
-  
-  
-  /* footer starts here */
-  
-  .footer {
-    background-color: #252323;
-    padding: 15px;
-    text-align: center;
-    height: 300%;
-    color: aliceblue;
-    margin-top: 3%;
-  }
-  
-  .rowf .columnf h2 {
-    color: var(--golden);
-  }
-  .rowf .columnf p {
-    font-size: 120%;
-  }
-  /* Create three equal columns that floats next to each other */
-  .columnf {
-    float: left;
-    width: 29%;
-    padding: 15px;
-    margin-right: 2%;
-  }
-  
-  /* Clear floats after the columns */
-  .rowf:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  
-  /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 600px) {
-    .columnf {
-      width: 100%;
-    }
-  }
-  
-  /* social media icons */
-  .fa {
-    padding: 10px;
-    font-size: 25px;
-    width: 25px;
-    height: 25px;
-    text-align: center;
-    text-decoration: none;
-    margin: 4px 1px;
-    border-radius: 50%;
-  }
-  
-  .fa:hover {
-    opacity: 0.7;
-  }
-  .fa-instagram {
-    background: rgb(173, 25, 165);
-    color: white;
-  }
-  
-  .fa-facebook {
-    background: #3b5998;
-    color: white;
-  }
-  
-  .fa-telegram {
-    background: #3888a8;
-    color: white;
-  }
-  
-  .fa-twitter {
-    background: #55acee;
-    color: white;
-  }
-  
-  .fa-whatsapp {
-    background: #12be29;
-    color: white;
-  }
-  
+}
+
+/* social media icons */
+.fa {
+  padding: 10px;
+  font-size: 25px;
+  width: 25px;
+  height: 25px;
+  text-align: center;
+  text-decoration: none;
+  margin: 4px 1px;
+  border-radius: 50%;
+}
+
+.fa:hover {
+  opacity: 0.7;
+}
+.fa-instagram {
+  background: rgb(173, 25, 165);
+  color: white;
+}
+
+.fa-facebook {
+  background: #3b5998;
+  color: white;
+}
+
+.fa-telegram {
+  background: #3888a8;
+  color: white;
+}
+
+.fa-twitter {
+  background: #55acee;
+  color: white;
+}
+
+.fa-whatsapp {
+  background: #12be29;
+  color: white;
+}
