--- a/view/contacts/contacts.html
+++ b/view/contacts/contacts.html
@@ -2,59 +2,124 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="contacts.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="contacts.css">
-    <title>zuxmoney</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="contacts.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="contacts.css">
+  <title>zuxmoney</title>
 </head>
 
 <body>
-    <div class="backimage">
-        <div class="topnav">
-            <ul>
-                <li class="logo" style="float: left; color: white;">Zux money beauty</li>
-                <li><a href="../gallerypage/gallerypage.html">GALLERY</a></li>
-                <li><a href="../servicepage/service.html">SERVICES</a></li>
-                <li><a href="../contacts/contacts.html">CONTACTS</a></li>
-                <li><a href="../about/about.html">ABOUT</a></li>
-                <li><a href="../homepage/home.html">HOME</a></li>
-            </ul>
-        </div>
+  <div class="backimage">
+    <div class="topnav">
+      <ul>
+        <li class="logo" style="float: left; margin-top: 2%;" ><img src="../../src/images/logo5.png" alt="Logo" width="270px" ></li>
+        <li><a href="../gallerypage/gallerypage.html">GALLERY</a></li>
+        <li><a href="../servicepage/service.html">SERVICES</a></li>
+        <li><a href="../contacts/contacts.html">CONTACTS</a></li>
+        <li><a href="../about/about.html">ABOUT</a></li>
+        <li><a href="../homepage/home.html">HOME</a></li>
+      </ul>
     </div>
-    
+  </div>
 
-    <div class="footer">
-
-        <a href="#" class="fa fa-instagram"></a>
-        <a href="#" class="fa fa-facebook"></a>
-        
-        <a href="#" class="fa fa-telegram"></a>
-        <a href="#" class="fa fa-twitter"></a>
-        <a href="#" class="fa fa-whatsapp"></a>
-          
-          <div class="rowf">
-            <div class="columnf">
-              <h2>Hours</h2>
-              <p >Monday-Friday:&nbsp; &nbsp;&nbsp;&nbsp;  8:00am-10:00pm<br>
-              Saturday:&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; 9:00am-7:00pm<br>
-             Sunday:&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp; 12:00am-7:00pm</p>
-            </div>
-            
-            <div class="columnf">
-              <h2>Location</h2>
-              <p>Gongo la mboto, Dar es salaam, Tanzania<br>Nyerere road, Kampala road </p>
-            </div>
-            
-            <div class="columnf">
-              <h2>Contacts</h2>
-              <p>Phone:&nbsp; &nbsp; &nbsp;&nbsp;  +255764730547<br>Email:&nbsp; &nbsp; &nbsp;&nbsp; zux@gmail.com<p>
+  <div class="contact">
+    <div class="head">
+      <p>
+        <span>Contact</span> Us
+      </p>
+    </div>
+    <div class="address">
+      <table>
+        <tr>
+          <td>Gongo la mboto, DaresSalaam, Tanzania</td>
+        </tr>
+        <tr>
+          <td>
+            Nyerere Road, Kampala Road
+          </td>
+        </tr>
+        <tr>
+          <td>
+            zuxmoney@gmail.com
+          </td>
+        </tr>
+        <tr>
+          <td>
+            Tel: +255677855543 <br>
+            Tel: +255677855543
+          </td>
+        </tr>
+        <tr>
+          <td>
+            Follow us on socia media
+          </td>
+        </tr>
+      </table>
+    </div>
+    <div class="formspace">
+      <p>Get in touch with us</p>
+      <div class="container">
+        <form action="">
+          <div class="row">
+            <div class="col-75">
+              <input type="text" id="fname" name="firstname" placeholder="Your name..">
             </div>
           </div>
-        </div>
-        
+          <div class="row">
+            <div class="col-75">
+              <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-75">
+              <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+            </div>
+          </div>
+          <br>
+          <div class="row">
+            <input type="submit" value="Submit">
+          </div>
+        </form>
+      </div>
+
+    </div>
+  </div>
+
+
+
+  <div class="footer">
+
+    <a href="#" class="fa fa-instagram"></a>
+    <a href="#" class="fa fa-facebook"></a>
+
+    <a href="#" class="fa fa-telegram"></a>
+    <a href="#" class="fa fa-twitter"></a>
+    <a href="#" class="fa fa-whatsapp"></a>
+
+    <div class="rowf">
+      <div class="columnf">
+        <h2>Hours</h2>
+        <p>Monday-Friday:&nbsp; &nbsp;&nbsp;&nbsp; 8:00am-10:00pm<br>
+          Saturday:&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; 9:00am-7:00pm<br>
+          Sunday:&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp; 12:00am-7:00pm</p>
+      </div>
+
+      <div class="columnf">
+        <h2>Location</h2>
+        <p>Gongo la mboto, Dar es salaam, Tanzania<br>Nyerere road, Kampala road </p>
+      </div>
+
+      <div class="columnf">
+        <h2>Contacts</h2>
+        <p>Phone:&nbsp; &nbsp; &nbsp;&nbsp; +255764730547<br>Email:&nbsp; &nbsp; &nbsp;&nbsp; zux@gmail.com
+        <p>
+      </div>
+    </div>
+  </div>
+
 </body>
 
 </html>
