--- a/view/servicepage/service.html
+++ b/view/servicepage/service.html
@@ -15,7 +15,7 @@
     <div class="backimage">
         <div class="topnav">
             <ul>
-                <li class="logo" style="float: left; color: white;">Zux money beauty</li>
+                <li class="logo" style="float: left; margin-top: 2%;" ><img src="../../src/images/logo5.png" alt="Logo" width="270px" ></li>
                 <li><a href="../gallerypage/gallerypage.html">GALLERY</a></li>
                 <li><a href="../servicepage/service.html">SERVICES</a></li>
                 <li><a href="../contacts/contacts.html">CONTACTS</a></li>
