--- a/view/homepage/home.html
+++ b/view/homepage/home.html
@@ -14,14 +14,18 @@
 <body>
     <div class="backimage">
         <div class="topnav">
-            <ul>
-                <li class="logo" style="float: left; margin-top: 2%;" ><img src="../../src/images/logo5.png" alt="Logo" width="270px" ></li>
+            <div class="logo">
+                <img src="../../src/images/logo5.png" alt="Logo" width="270px" >
+            </div>
+            <ul class="subtop">
+                <!-- <li class="logo" style="float: left; margin-top: 2%;" ><img src="../../src/images/logo5.png" alt="Logo" width="270px" ></li> -->
                 <li><a href="../gallerypage/gallerypage.html">GALLERY</a></li>
                 <li><a href="../servicepage/service.html">SERVICES</a></li>
                 <li><a href="../contacts/contacts.html">CONTACTS</a></li>
                 <li><a href="../about/about.html">ABOUT</a></li>
                 <li><a href="../homepage/home.html">HOME</a></li>
             </ul>
+            
         </div>
     </div>
     <div class="services">
@@ -107,19 +111,19 @@
           
           <div class="row">
             <div class="column">
-              <h2>Hours</h2>
+              <h3>Hours</h3>
               <p >Monday-Friday:&nbsp; &nbsp;&nbsp;&nbsp;  8:00am-10:00pm<br>
               Saturday:&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; 9:00am-7:00pm<br>
              Sunday:&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp; 12:00am-7:00pm</p>
             </div>
             
             <div class="column">
-              <h2>Location</h2>
+              <h3>Location</h3>
               <p>Gongo la mboto, Dar es salaam, Tanzania<br>Nyerere road, Kampala road </p>
             </div>
             
             <div class="column">
-              <h2>Contacts</h2>
+              <h3>Contacts</h3>
               <p>Phone:&nbsp; &nbsp; &nbsp;&nbsp;  +255764730547<br>Email:&nbsp; &nbsp; &nbsp;&nbsp; zux@gmail.com<p>
             </div>
           </div>
