--- a/view/homepage/home.html
+++ b/view/homepage/home.html
@@ -15,7 +15,7 @@
     <div class="backimage">
         <div class="topnav">
             <div class="logo">
-                <img src="../../src/images/logo5.png" alt="Logo" width="270px" >
+                <img src="../../src/images/logo5.png" alt="Logo" width="270px">
             </div>
             <ul class="subtop">
                 <!-- <li class="logo" style="float: left; margin-top: 2%;" ><img src="../../src/images/logo5.png" alt="Logo" width="270px" ></li> -->
@@ -25,45 +25,46 @@
                 <li><a href="../about/about.html">ABOUT</a></li>
                 <li><a href="../homepage/home.html">HOME</a></li>
             </ul>
-            
+
         </div>
     </div>
+
     <div class="services">
         <div class="head">
             <p>
                 <span>Our</span> Services
             </p>
         </div>
-        <div class="servicesextra">
-            <div class="servicesgallery">
-                <div class="servigallery1">
-                    <a target="_blank" href="../../src/images/pic4.jpg">
-                        <img src="../../src/images/pic4.jpg" alt="Cinque Terre" width="600" height="400">
-                    </a>
-                    <p>HAIR <span>DRESSING</span></p>
-                    <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
-                        description of the image here</div>
-                </div>
 
-                <div class="servigallery2">
-                    <a target="_blank" href="../../src/images/pic2.jpg">
-                        <img src="../../src/images/pic2.jpg" alt="Forest" width="600" height="400">
-                    </a>
-                    <p>MAKE<span>UP</span></p>
-                    <div class="desc">Add a description of the image hereAdd a description of the image here, Add a
-                        description of the image here</div>
-                </div>
+        <div class="servicesgallery">
+            <div class="servigallery1">
+                <a target="_blank" href="../../src/images/pic4.jpg">
+                    <img src="../../src/images/pic4.jpg" alt="Cinque Terre" width="600" height="400">
+                </a>
+                <p>HAIR <span>DRESSING</span></p>
+                <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
+                    description of the image here</div>
+            </div>
 
-                <div class="servigallery3">
-                    <a target="_blank" href="../../src/images/pic3.jpg">
-                        <img src="../../src/images/pic3.jpg" alt="Northern Lights" width="600" height="400">
-                    </a>
-                    <p><span>DISCOUNT</span> ON SERVICES</p>
-                    <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
-                        description of the image here</div>
-                </div>
+            <div class="servigallery2">
+                <a target="_blank" href="../../src/images/pic2.jpg">
+                    <img src="../../src/images/pic2.jpg" alt="Forest" width="600" height="400">
+                </a>
+                <p>MAKE<span>UP</span></p>
+                <div class="desc">Add a description of the image hereAdd a description of the image here, Add a
+                    description of the image here</div>
+            </div>
+
+            <div class="servigallery3">
+                <a target="_blank" href="../../src/images/pic3.jpg">
+                    <img src="../../src/images/pic3.jpg" alt="Northern Lights" width="600" height="400">
+                </a>
+                <p><span>DISCOUNT</span> ON SERVICES</p>
+                <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
+                    description of the image here</div>
             </div>
         </div>
+
     </div>
     <div class="offers">
         <div class="head">
@@ -71,64 +72,64 @@
                 <span>Special</span> offers
             </p>
         </div>
-        <div class="specialoffers">
-            <div class="offersgallery">
-                <div class="offgallery1">
-                    <a target="_blank" href="../../src/images/pic4.jpg">
-                        <img src="../../src/images/pic4.jpg" alt="Cinque Terre" width="600" height="400">
-                    </a>
-                    <p>FREE <span>Wi-Fi</span></p>
-                    <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
-                        description of the image here</div>
-                </div>
-                <div class="offgallery2">
-                    <a target="_blank" href="../../src/images/pic2.jpg">
-                        <img src="../../src/images/pic2.jpg" alt="Forest" width="600" height="400">
-                    </a>
-                    <p>JUICE AND <span>BITES</span></p>
-                    <div class="desc">Add a description of the image hereAdd a description of the image here, Add a
-                        description of the image here</div>
-                </div>
-                <div class="offgallery3">
-                    <a target="_blank" href="../../src/images/pic3.jpg">
-                        <img src="../../src/images/pic3.jpg" alt="Northern Lights" width="600" height="400">
-                    </a>
-                    <p><span>DISCOUNT</span> ON SERVICES</p>
-                    <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
-                        description of the image here</div>
-                </div>
+        <div class="offersgallery">
+            <div class="offgallery1">
+                <a target="_blank" href="../../src/images/pic4.jpg">
+                    <img src="../../src/images/pic4.jpg" alt="Cinque Terre" width="600" height="400">
+                </a>
+                <p>FREE <span>Wi-Fi</span></p>
+                <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
+                    description of the image here</div>
+            </div>
+            <div class="offgallery2">
+                <a target="_blank" href="../../src/images/pic2.jpg">
+                    <img src="../../src/images/pic2.jpg" alt="Forest" width="600" height="400">
+                </a>
+                <p>JUICE AND <span>BITES</span></p>
+                <div class="desc">Add a description of the image hereAdd a description of the image here, Add a
+                    description of the image here</div>
+            </div>
+            <div class="offgallery3">
+                <a target="_blank" href="../../src/images/pic3.jpg">
+                    <img src="../../src/images/pic3.jpg" alt="Northern Lights" width="600" height="400">
+                </a>
+                <p><span>DISCOUNT</span> ON SERVICES</p>
+                <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
+                    description of the image here</div>
             </div>
         </div>
+
     </div>
     <div class="footer">
 
         <a href="#" class="fa fa-instagram"></a>
         <a href="#" class="fa fa-facebook"></a>
-        
+
         <a href="#" class="fa fa-telegram"></a>
         <a href="#" class="fa fa-twitter"></a>
         <a href="#" class="fa fa-whatsapp"></a>
-          
-          <div class="row">
+
+        <div class="row">
             <div class="column">
-              <h3>Hours</h3>
-              <p >Monday-Friday:&nbsp; &nbsp;&nbsp;&nbsp;  8:00am-10:00pm<br>
-              Saturday:&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; 9:00am-7:00pm<br>
-             Sunday:&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp; 12:00am-7:00pm</p>
+                <h3>Hours</h3>
+                <p>Monday-Friday:&nbsp; &nbsp;&nbsp;&nbsp; 8:00am-10:00pm<br>
+                    Saturday:&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; 9:00am-7:00pm<br>
+                    Sunday:&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp; 12:00am-7:00pm</p>
             </div>
-            
+
             <div class="column">
-              <h3>Location</h3>
-              <p>Gongo la mboto, Dar es salaam, Tanzania<br>Nyerere road, Kampala road </p>
+                <h3>Location</h3>
+                <p>Gongo la mboto, Dar es salaam, Tanzania<br>Nyerere road, Kampala road </p>
             </div>
-            
+
             <div class="column">
-              <h3>Contacts</h3>
-              <p>Phone:&nbsp; &nbsp; &nbsp;&nbsp;  +255764730547<br>Email:&nbsp; &nbsp; &nbsp;&nbsp; zux@gmail.com<p>
+                <h3>Contacts</h3>
+                <p>Phone:&nbsp; &nbsp; &nbsp;&nbsp; +255764730547<br>Email:&nbsp; &nbsp; &nbsp;&nbsp; zux@gmail.com
+                <p>
             </div>
-          </div>
         </div>
-        
+    </div>
+
 </body>
 
 </html>
